Fix avatar clipping with object-fit:cover and aspect-ratio:1

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -92,6 +92,9 @@
   img {
     max-width: 175px;
     border-radius: 50%;
+    object-fit: cover;
+    object-position: center top;
+    aspect-ratio: 1;
 
     @include breakpoint($large) {
       padding: 4px;
